--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
     "dotenv": "^16.0.3",
     "ethers": "^5.6.2",
     "fs-extra": "^11.1.1",
-    "solc": "0.8.7-fixed"
+    "prettier": "^2.8.7",
+    "prettier-plugin-solidity": "^1.1.3",
+    "solc": "0.8.7-fixed",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
   },
   "scripts": {
     "compile": "yarn solcjs --bin --abi --include-path node_modules/ --base-path . -o . SimpleStorage.sol"
